[gd_scene load_steps=4 format=2]

[ext_resource path="res://MemoryConsumption.gd" type="Script" id=1]
[ext_resource path="res://TypeLine.tscn" type="PackedScene" id=2]
[ext_resource path="res://MemoryUsage.gd" type="Script" id=3]

[node name="MemoryConsumption" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lines" type="VBoxContainer" parent="."]
margin_right = 800.0
margin_bottom = 220.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="integer" parent="Lines" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 800.0
margin_bottom = 24.0

[node name="ButtonType" parent="Lines/integer" index="0"]
text = "integer"

[node name="Amount" parent="Lines/integer" index="1"]
margin_right = 252.0

[node name="ButtonCompute" parent="Lines/integer" index="2"]
margin_left = 256.0
margin_right = 327.0

[node name="TimeTaken" parent="Lines/integer" index="3"]
margin_left = 331.0
margin_right = 614.0

[node name="MemoryTaken" parent="Lines/integer" index="4"]
margin_left = 618.0
margin_right = 725.0

[node name="LinePerObject" parent="Lines/integer" index="5"]
margin_left = 729.0
margin_right = 800.0

[node name="poolInt" parent="Lines" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_right = 800.0
margin_bottom = 52.0

[node name="ButtonType" parent="Lines/poolInt" index="0"]
text = "poolInt"

[node name="Amount" parent="Lines/poolInt" index="1"]
margin_right = 252.0

[node name="ButtonCompute" parent="Lines/poolInt" index="2"]
margin_left = 256.0
margin_right = 327.0

[node name="TimeTaken" parent="Lines/poolInt" index="3"]
margin_left = 331.0
margin_right = 614.0

[node name="MemoryTaken" parent="Lines/poolInt" index="4"]
margin_left = 618.0
margin_right = 725.0

[node name="LinePerObject" parent="Lines/poolInt" index="5"]
margin_left = 729.0
margin_right = 800.0

[node name="object" parent="Lines" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 56.0
margin_right = 800.0
margin_bottom = 80.0

[node name="ButtonType" parent="Lines/object" index="0"]
text = "object"

[node name="Amount" parent="Lines/object" index="1"]
margin_right = 252.0

[node name="ButtonCompute" parent="Lines/object" index="2"]
margin_left = 256.0
margin_right = 327.0

[node name="TimeTaken" parent="Lines/object" index="3"]
margin_left = 331.0
margin_right = 614.0

[node name="MemoryTaken" parent="Lines/object" index="4"]
margin_left = 618.0
margin_right = 725.0

[node name="LinePerObject" parent="Lines/object" index="5"]
margin_left = 729.0
margin_right = 800.0

[node name="reference" parent="Lines" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 84.0
margin_right = 800.0
margin_bottom = 108.0

[node name="ButtonType" parent="Lines/reference" index="0"]
text = "reference"

[node name="Amount" parent="Lines/reference" index="1"]
margin_right = 252.0

[node name="ButtonCompute" parent="Lines/reference" index="2"]
margin_left = 256.0
margin_right = 327.0

[node name="TimeTaken" parent="Lines/reference" index="3"]
margin_left = 331.0
margin_right = 614.0

[node name="MemoryTaken" parent="Lines/reference" index="4"]
margin_left = 618.0
margin_right = 725.0

[node name="LinePerObject" parent="Lines/reference" index="5"]
margin_left = 729.0
margin_right = 800.0

[node name="resource" parent="Lines" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 112.0
margin_right = 800.0
margin_bottom = 136.0

[node name="ButtonType" parent="Lines/resource" index="0"]
text = "resource"

[node name="Amount" parent="Lines/resource" index="1"]
margin_right = 252.0

[node name="ButtonCompute" parent="Lines/resource" index="2"]
margin_left = 256.0
margin_right = 327.0

[node name="TimeTaken" parent="Lines/resource" index="3"]
margin_left = 331.0
margin_right = 614.0

[node name="MemoryTaken" parent="Lines/resource" index="4"]
margin_left = 618.0
margin_right = 725.0

[node name="LinePerObject" parent="Lines/resource" index="5"]
margin_left = 729.0
margin_right = 800.0

[node name="node" parent="Lines" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 140.0
margin_right = 800.0
margin_bottom = 164.0

[node name="ButtonType" parent="Lines/node" index="0"]
text = "node"

[node name="Amount" parent="Lines/node" index="1"]
margin_right = 252.0

[node name="ButtonCompute" parent="Lines/node" index="2"]
margin_left = 256.0
margin_right = 327.0

[node name="TimeTaken" parent="Lines/node" index="3"]
margin_left = 331.0
margin_right = 614.0

[node name="MemoryTaken" parent="Lines/node" index="4"]
margin_left = 618.0
margin_right = 725.0

[node name="LinePerObject" parent="Lines/node" index="5"]
margin_left = 729.0
margin_right = 800.0

[node name="dictionary" parent="Lines" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 168.0
margin_right = 800.0
margin_bottom = 192.0

[node name="ButtonType" parent="Lines/dictionary" index="0"]
text = "dictionary"

[node name="Amount" parent="Lines/dictionary" index="1"]
margin_right = 252.0

[node name="ButtonCompute" parent="Lines/dictionary" index="2"]
margin_left = 256.0
margin_right = 327.0

[node name="TimeTaken" parent="Lines/dictionary" index="3"]
margin_left = 331.0
margin_right = 614.0

[node name="MemoryTaken" parent="Lines/dictionary" index="4"]
margin_left = 618.0
margin_right = 725.0

[node name="LinePerObject" parent="Lines/dictionary" index="5"]
margin_left = 729.0
margin_right = 800.0

[node name="array" parent="Lines" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 196.0
margin_right = 800.0
margin_bottom = 220.0

[node name="ButtonType" parent="Lines/array" index="0"]
text = "array"

[node name="Amount" parent="Lines/array" index="1"]
margin_right = 252.0

[node name="ButtonCompute" parent="Lines/array" index="2"]
margin_left = 256.0
margin_right = 327.0

[node name="TimeTaken" parent="Lines/array" index="3"]
margin_left = 331.0
margin_right = 614.0

[node name="MemoryTaken" parent="Lines/array" index="4"]
margin_left = 618.0
margin_right = 725.0

[node name="LinePerObject" parent="Lines/array" index="5"]
margin_left = 729.0
margin_right = 800.0

[node name="ObjectAmount" type="HBoxContainer" parent="."]
margin_top = 224.0
margin_right = 800.0
margin_bottom = 248.0

[node name="Label" type="Label" parent="ObjectAmount"]
margin_top = 5.0
margin_right = 176.0
margin_bottom = 19.0
text = "Amount of objets to create:"

[node name="Amount" type="SpinBox" parent="ObjectAmount"]
margin_left = 180.0
margin_right = 800.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = 1000.0
max_value = 1e+08
step = 1000.0
value = 100000.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MemoryUsage" type="HBoxContainer" parent="."]
margin_top = 252.0
margin_right = 800.0
margin_bottom = 276.0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="LabelStatic" type="Label" parent="MemoryUsage"]
margin_top = 5.0
margin_right = 197.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Static Memory:"

[node name="LineStatic" type="LineEdit" parent="MemoryUsage"]
margin_left = 201.0
margin_right = 398.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false

[node name="LabelDynamic" type="Label" parent="MemoryUsage"]
margin_left = 402.0
margin_top = 5.0
margin_right = 599.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Dynamic Memory:"

[node name="LineDynamic" type="LineEdit" parent="MemoryUsage"]
margin_left = 603.0
margin_right = 800.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false

[editable path="Lines/integer"]
[editable path="Lines/poolInt"]
[editable path="Lines/object"]
[editable path="Lines/reference"]
[editable path="Lines/resource"]
[editable path="Lines/node"]
[editable path="Lines/dictionary"]
[editable path="Lines/array"]
